# analysator

./: CITATION.cff  Doxyfile  Makefile  README  README.md  TMP_LAUNCH_VISIT_BACKUP.py  __init__.py  analysator.py  code.rst  conf.py  filemanagement.py  hatch_build.py  index.html  index.rst  lumi_container.sh  objects.inv  pyproject.toml  pytest.py  pytools.py  pytools_dummy.py  requirements-backend.txt  requirements.txt  searchindex.js  test-sameli.py  useroptions.py
Documentation/: README.rst
_modules/: index.html
_sources/: about.rst.txt  analysator_exercises.rst.txt  analysator_supported.rst.txt  biot_savart.rst.txt  calculations.rst.txt  coverage.rst.txt  gics.rst.txt  index.rst.txt  magnetopause.rst.txt  magnetopause2d.rst.txt  magnetopause3d.rst.txt  magnetosphere_regions.rst.txt  miscellaneous.rst.txt  obliqueshock_nif.rst.txt  scripts.rst.txt  shue.rst.txt  tsyganenko.rst.txt  vlsvfile.rst.txt
about/: index.html
analysator/: __init__.py  filemanagement.py  index.html
analysator_exercises/: index.html
analysator_supported/: index.html
biot_savart/: index.html
calculations/: index.html
containerization/: lumi_container.sh
contribution_code/: index.html
contribution_doc/: index.html
coverage/: index.html
cutthrough_timeseries/: index.html
examples/: fourier_transform_field.py  generate_movie.sh  generate_panel.py  generate_panel_orig.py  gridspec_plot.py  multi_panel_plot.py  neutral_lines.py  plot_2d_magnetopause.py  plot_3d_magnetopause.py  plot_VSC.py  plot_streamline_magnetopause_2d.py  plot_streamline_magnetopause_3d.py  plot_themis_planes.py  plot_timestep.py  setup-bulk-caches.py  sidecar.py  write_htg.py
genindex/: index.html
gics/: index.html
hpcusage/: index.html
jlVlsv/: plot.jl  vlsvreader.jl  vlsvvariables.jl
magnetopause/: index.html
magnetopause2d/: index.html
magnetopause3d/: index.html
magnetosphere_regions/: index.html
miscellaneous/: ballooning.ipynb  filenames.py  index.html  miscellaneous.py  plots.py  rankine.py  slams.py  vtkWriter.py  vtkwriter.py
obliqueshock/: index.html
obliqueshock_nif/: index.html
plot/: index.html
plot_streamline_magnetopause_2d/: index.html
plugins/: vlsvParaReader.py
projects/: README.txt
py-modindex/: index.html
pyCalculations/: Bn.py  backstream.py  bn.py  bowshock.py  calculations.py  cellids.py  cut2d.py  cut3d.py  cutthrough.py  delaunay.py  derivatives.py  differentialops.py  fieldtracer.py  find_x_and_o.py  fit.py  fourier.py  gyrophaseangle.py  ids3d.py  (+21 more)
(+448 files in other folders)
