[build-system]
requires = ["hatchling","numpy>2.0"]
build-backend = "hatchling.build"

[project]
name = "analysator"
version = "0.9.7"
authors = [
    { name = "Markku Alho", email = "markku.alho@helsinki.fi"},
    { name = "Et al"},
]
maintainers = [
    { name = "Markku Alho", email = "markku.alho@helsinki.fi"},
]
description = "Tools for reading and analysing Vlasiator .vlsv output files."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>2.0",
    "scipy",
    "matplotlib",
    "packaging",
    "scikit-image",
    "vtk>=9.2",
    "yt",
    "rtree",
    "cpphelpers @ {root:uri}/analysator/cpphelpers/"
]

[project.optional-dependencies]
none = [
]
all = [
]
bvtk = [
    "vtk==9.2.6",
]
testpackage = [
    "opencv-python",
]
[project.urls]
Homepage = "https://github.com/fmihpc/analysator"
Issues = "https://github.com/fmihpc/analysator/issues"

[tool.hatch.build.targets.wheel]
packages = ["./analysator","./pytools"]

[tool.hatch.build.targets.sdist]
packages = ["./analysator","./pytools"]

[tool.hatch.metadata]
allow-direct-references = true


